--- a/index.html
+++ b/index.html
@@ -176,13 +176,14 @@
       align-items: center;
       width: 400px;
       margin-top: var(--gap);
-      margin-left: var(--gap);
+      margin-left: 30px;
     }
 
     .title__img {
       width: 160px;
       height: auto;
       margin-right: 7px;
+      box-shadow: -50px 0px 20px -28px rgba(0, 0, 0, 0.15);
     }
 
     .title__text-bigger {
@@ -280,11 +281,24 @@
       flex-direction: row;
       justify-content: flex-end;
       position: relative;
+      z-index: 5;
       padding-top: 30px;
       padding-right: 260px;
       height: 160px;
       border-top: 16px solid #fff;
-      background-color: var(--warning-color);
+      background-color: #f1d019;
+    }
+
+    .sr::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -15;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(45deg, rgba(170, 24, 9, 0) 0%, rgba(168, 24, 11, 0.75) 6%, #971b1d 50%, #961b1e 45%, #961b1e 100%);
     }
 
     .sr p {
