--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
     .title {
       display: flex;
       flex-direction: row;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       width: 400px;
       margin-top: var(--gap);
-      margin-left: 30px;
+      margin-left: var(--gap);
     }
 
     .title__img {
@@ -206,13 +206,13 @@
       font-weight: 800;
       line-height: 1em;
       line-height: 1em;
-      font-size: 35px;
+      font-size: 40px;
       font-weight: 800;
     }
 
     .title__text-sign {
       font-family: Bender, Arial, sans-serif;
-      font-size: 35px;
+      font-size: 1em;
       font-weight: 800;
       display: inline-block;
       background-color: var(--main-color-light);
