--- a/index.html
+++ b/index.html
@@ -54,14 +54,6 @@
 
     @font-face {
       font-family: 'GothamPro';
-      src: url("./fonts/gothampro-bold.woff2") format("woff2");
-      font-weight: 600;
-      font-style: normal;
-      font-display: block;
-    }
-
-    @font-face {
-      font-family: 'GothamPro';
       src: url("fonts/gothampro-black.woff2") format("woff2");
       font-weight: 800;
       font-style: normal;
@@ -91,7 +83,7 @@
       display: flex;
       flex-direction: column;
       width: 1120px;
-      height: 1600px;
+      min-height: 1584px;
     }
 
     .container {
@@ -105,7 +97,7 @@
     .shape {
       background: transparent;
       /* background: rgba(0, 0, 0, 0.15); */
-      height:890px;
+      height:850px;
       width: 100%;
       background-size:cover;
       float:right;
@@ -260,7 +252,6 @@
       display: flex;
       flex-grow: 1;
       flex-direction: column;
-      margin-top: 30px;
     }
 
     .mas {
@@ -289,6 +280,10 @@
       height: 200px;
       border-top: 20px solid #fff;
       background-color: #f1d019;
+      font-size: 54px;
+      color: #ffffff;
+      text-transform: uppercase;
+      font-weight: 800;
     }
 
     .sr::before {
@@ -301,13 +296,6 @@
       width: 100%;
       height: 100%;
       background: linear-gradient(45deg, rgba(170, 24, 9, 0) 0%, rgba(168, 24, 11, 0.75) 6%, #971b1d 50%, #961b1e 45%, #961b1e 100%);
-    }
-
-    .sr p {
-      font-size: 54px;
-      color: #ffffff;
-      text-transform: uppercase;
-      font-weight: 800;
     }
 
     .sr__logo {
@@ -1031,7 +1019,7 @@
           <h1 class="title__text">Человек <span class="title__text-bigger">против</span> системы<span class="title__text-sign">!</span></h1>
         </div>
       </div>
-      
+
       <div class="frame-photo">
         <div class="frame-photo__img-wrap">
           <img src="./photo.jpg" alt="">
@@ -1107,9 +1095,7 @@
         Участник проекта «Человек против системы», <br/>Новосибирская область, 2020 г.
       </div>
       <div class="sr">
-        <p>
-          Справедливая Россия
-        </p>
+        Справедливая Россия
         <div class="sr__logo">
           <?xml version="1.0" encoding="utf-8"?>
             <!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
